Fixed width issue in Patients screen to prevent squished text

--- a/src/app/pages/patients/patients.page.scss
+++ b/src/app/pages/patients/patients.page.scss
@@ -11,6 +11,10 @@
     color: rgba(34, 34, 34, 0.918);
 }
 
+.patient-container {
+    width: 100%;
+}
+
 .patient-status {
     color: #777;
     font-size: 1em;
